--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "LP-balance-checker",
+  "name": "metis-migration",
   "version": "1.0.0",
   "main": "index.js",
   "author": "0xBugsy <0xbuggy2@proton.me>",
